# BlochQT

./: .gitignore  CMakeLists.txt  README.md
Materials/: Al.cfg  Cu.cfg
lib/: AuxFns.cpp  AuxFns.h  Beam.cpp  Beam.h  Constants.h  Crystal.cpp  Crystal.h  Trajectory.cpp  Trajectory.h  WaveFn.cpp  WaveFn.h
src/: PlaneWave.cpp  Probe.cpp.temp  TwoBeam.cpp
test/: test_Auxfns.cpp  test_crystal.cpp  test_traj.cpp
